Correction on ex03 and ex04

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -4,7 +4,7 @@ SRC = main.cpp Zombie.cpp zombieHorde.cpp
 OBJ = $(SRC:.cpp=.o)
 HEADER = Zombie.hpp
 
-CC = c++
+CXX = c++
 RM = rm -f
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
@@ -12,7 +12,7 @@ CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 all: $(NAME)
 
 $(NAME): $(HEADER) $(OBJ)
-	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	$(RM) $(OBJ)
