--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -3,7 +3,7 @@ NAME = sed
 SRC = main.cpp
 OBJ = $(SRC:.cpp=.o)
 
-CC = c++
+CXX = c++
 RM = rm -f
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
@@ -11,7 +11,7 @@ CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	$(RM) $(OBJ)
